# air-runner-standalone

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/air/: InitAll.h
include/air/Dialect/: CMakeLists.txt
include/air/Dialect/AIR/: CMakeLists.txt
lib/: CMakeLists.txt  InitAll.cpp
lib/Dialect/: CMakeLists.txt
tools/: CMakeLists.txt
tools/air-runner/: CMakeLists.txt
